<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    style="@style/MATCHPARENT"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titleBar_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_recycler_view_item"
        titlebar:centerText="@string/about_activity"
        titlebar:centerTextColor="@color/colorAccent"
        titlebar:centerTextSize="14sp"
        titlebar:centerType="textView"
        titlebar:fillStatusBar="true"
        titlebar:leftImageResource="@drawable/ic_back"
        titlebar:leftType="imageButton"
        titlebar:showBottomLine="true"
        titlebar:statusBarColor="@color/colorPrimary"
        titlebar:statusBarMode="dark"
        titlebar:titleBarColor="@color/colorPrimary"
        titlebar:titleBarHeight="48dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_qq_group"
        style="@style/AboutCard"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp">

        <ImageView
            style="@style/MATCHPARENT"
            android:background="@drawable/bg_about"
            android:contentDescription="@string/about_text"
            android:padding="10dp" />

        <RelativeLayout style="@style/AboutCardLayout">

            <TextView
                style="@style/AboutCardText"
                android:layout_centerVertical="true"
                android:drawableStart="@drawable/ic_logo"
                android:gravity="left"
                android:text="@string/about_text"
                android:textSize="12sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_wechat_donation"
        style="@style/AboutCard"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp">

        <ImageView
            style="@style/MATCHPARENT"
            android:background="@drawable/bg_wechat"
            android:contentDescription="@string/wechat_pay" />

        <RelativeLayout style="@style/AboutCardLayout">

            <TextView
                style="@style/AboutCardText"
                android:drawableStart="@drawable/ic_wechat_pay"
                android:text="@string/wechat_pay" />

            <TextView
                style="@style/AboutCardSubText"
                android:text="@string/tips_wechat_pay" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_ali_donation"
        style="@style/AboutCard"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp">

        <ImageView
            style="@style/MATCHPARENT"
            android:background="@drawable/bg_ali_pay"
            android:contentDescription="@string/ali_pay" />

        <RelativeLayout style="@style/AboutCardLayout">

            <TextView
                style="@style/AboutCardText"
                android:drawableStart="@drawable/ic_ali_pay"
                android:text="@string/ali_pay" />

            <TextView
                style="@style/AboutCardSubText"
                android:text="@string/tips_ali_pay" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_hongbao_donation"
        style="@style/AboutCard"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp">

        <ImageView
            style="@style/MATCHPARENT"
            android:background="@drawable/bg_hongbao"
            android:contentDescription="@string/hongbao_pay" />

        <RelativeLayout style="@style/AboutCardLayout">

            <TextView
                style="@style/AboutCardText"
                android:drawableStart="@drawable/ic_hongbao"
                android:text="@string/hongbao_pay" />

            <TextView
                style="@style/AboutCardSubText"
                android:text="@string/tips_hongbao_pay" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>